--- a/README
+++ b/README
@@ -1,1 +1,32 @@
-CoinManager is a modular system for managing crytpocurrency mining pool accounts.
+Well What is it?
+================
+
+CoinManager is a modular library designed to make automating worker generation in bitcoin pools easier.
+
+What Pools Does It Support?
+===========================
+
+I initially plan to create modules for about 10 of the largest bitcoin pools.
+
+Are There Any Requirements To Run The Library?
+==============================================
+
+You need...
+
+* A web server with PHP 5.1 or higher.
+* The cURL PHP library enabled.
+
+NOTE: There are different requirenments for each module.  See module documentation.
+
+What Are You Going To Add Next?
+==============================
+
+- [x] Main README
+- [x] BitMinter Module
+- [ ] Slush's Pool Module
+- [ ] BtcGuild Module
+- [ ] 50BTC Module
+- [ ] Deepbit Module
+- [ ] EclipseMC Module
+- [ ] Module Documentation
+- [ ] Litcoin Modules
